--- a/5.mongose/project/package.json
+++ b/5.mongose/project/package.json
@@ -12,11 +12,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
-    "mongoose": "^8.15.2"
+    "mongoose": "^8.15.2",
+    "validator": "^13.15.15",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/validator": "^13.15.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
